# py-auto-android

./: .gitignore  README.md  build.py  build_file.py  product.md  pyproject.toml  requirements.txt
models/PP-LCNet_x1_0_textline_ori/: .msc
models/PP-OCRv5_mobile_det/: .msc
models/PP-OCRv5_mobile_rec/: .msc
src/pyauto/: main.py
src/pyauto/config/: config_manager.py
src/pyauto/core/: worker_logic.py
src/pyauto/page/: about_page.py  app_page.py  card_page.py  cluster_page.py  job_manage_page.py
src/pyauto/scripts/: README.md  task_runner.py  task_runner_temp.py
src/pyauto/scripts/config/: README.md  base_config.py
src/pyauto/scripts/dao/: README.md  mysql_dao.py
src/pyauto/scripts/job/: README.md  adapter_base.py  collection.py
src/pyauto/scripts/util/: README.md
src/pyauto/scripts/vo/: demo_vo.py
src/pyauto/utils/: adb.py  logUtil.py  mydb.py  ocr_util.py  path_utils.py  rapid_ocr_util.py
